# genusers

./: Makefile  pyproject.toml
genusers/: config.py  main.py
genusers/smsactivator/: activator_main.py  work_with_number.py
tests/: test_genusers.py
