[tool.poetry]
name = "genusers"
version = "0.1.0"
description = ""
authors = ["Madixxx22 <vysokolyan2016@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
aiohttp = "^3.8.3"
environs = "^9.5.0"
smsactivate = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main="genusers.main:main"